--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "server:watch": "nodemon --exec tsx --enable-source-maps ./src",
     "server:debug": "nodemon --exec tsx --enable-source-maps --inspect ./src",
     "prestart": "npm run build",
-    "start": "NODE_ENV=production node --use-strict .",
-    "setup:husky": "node -e \"try { (await import('husky')).default() } catch (e) { if (e.code !== 'ERR_MODULE_NOT_FOUND') throw e }\" --input-type module"
+    "start": "NODE_ENV=production node --use-strict ."
   },
   "author": "Defra DDTS",
   "license": "OGL-UK-3.0",
