added some unit testing

--- a/compose.yml
+++ b/compose.yml
@@ -7,6 +7,11 @@ services:
       target: development
     ports:
       - '3002:3002'
+    links:
+      - 'redis:redis'
+    depends_on:
+      redis:
+        condition: service_started
     environment:
       PORT: 3002
       NODE_ENV: development
@@ -15,6 +20,14 @@ services:
     volumes:
       - ./src:/home/node/src
       - ./package.json:/home/node/package.json
+
+  redis:
+    image: redis:7.2.3-alpine3.18
+    ports:
+      - '6379:6379'
+    restart: always
+    networks:
+      - fcp-sfd
 
 networks:
   fcp-sfd:
