--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint:fix": "standard . --fix",
     "lint:scss": "stylelint \"src/**/*.scss\" --cache --cache-location .cache/stylelint --cache-strategy content --color --ignore-path .gitignore",
     "postversion": "git add package.json package-lock.json && git commit -m $npm_package_version",
-    "test": "jest --coverage --verbose",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --coverage --verbose",
     "test:watch": "jest --watch",
     "test:lint": "standard",
     "server:watch": "nodemon --inspect=0.0.0.0 --ext js --legacy-watch src/index.js",
@@ -48,6 +48,7 @@
     "govuk-frontend": "^5.7.1",
     "hapi-pino": "^12.1.0",
     "hapi-pulse": "^3.0.1",
+    "https-proxy-agent": "^7.0.6",
     "ioredis": "^5.4.1",
     "lodash": "^4.17.21",
     "node-fetch": "^3.3.2",
