added unit further unit tests, refactored unit test config and logic to remove issues with pathing

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint:fix": "standard . --fix",
     "lint:scss": "stylelint \"src/**/*.scss\" --cache --cache-location .cache/stylelint --cache-strategy content --color --ignore-path .gitignore",
     "postversion": "git add package.json package-lock.json && git commit -m $npm_package_version",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest --coverage --verbose",
+    "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest --coverage --verbose --runInBand",
     "test:watch": "jest --watch",
     "test:lint": "standard",
     "server:watch": "nodemon --inspect=0.0.0.0 --ext js --legacy-watch src/index.js",
