--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,18 +23,23 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v4
 
-      - name: Build and Publish
-        uses: DEFRA/cdp-build-action/build@main
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Create Test Coverage Reports
         run: |
           npm ci
-          npm test
+      
+      - name: Run Tests
+        run: |
+          mkdir -p coverage
+          chmod -R a+rw ./coverage
+          docker compose -f docker-compose.yaml -f docker-compose.test.yaml run --rm "fcp-sfd-frontend"
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      - name: Build and Publish
+        uses: DEFRA/cdp-build-action/build@main
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
