--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "node": ">=22"
   },
   "scripts": {
-    "build": "run-s build:frontend",
-    "build:frontend": "NODE_ENV=production webpack",
+    "build": "NODE_ENV=production webpack",
     "dev": "run-p frontend:watch server:watch",
     "dev:debug": "run-p frontend:watch server:debug",
     "frontend:watch": "NODE_ENV=development webpack --watch",
