fixed docker files

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "lint:fix": "standard . --fix",
     "lint:scss": "stylelint \"src/**/*.scss\" --cache --cache-location .cache/stylelint --cache-strategy content --color --ignore-path .gitignore",
     "postversion": "git add package.json package-lock.json && git commit -m $npm_package_version",
-    "test": "run-s lint test:jest",
-    "test:jest": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest --coverage --verbose --runInBand",
+    "pretest": "npm run test:lint",
+    "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest --coverage --verbose --runInBand --forceExit",
     "test:watch": "jest --watch",
     "test:lint": "standard",
     "server:watch": "nodemon --inspect=0.0.0.0 --ext js --legacy-watch src/index.js",
