--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "dev": "run-p frontend:watch server:watch",
     "dev:debug": "run-p frontend:watch server:debug",
     "frontend:watch": "NODE_ENV=development webpack --watch",
-    "git:pre-commit-hook": "npm run test:lint && npm test",
     "postinstall": "npm run build",
     "lint": "run-s test:lint lint:scss",
     "lint:fix": "standard . --fix",
@@ -51,6 +50,7 @@
     "govuk-frontend": "^5.7.1",
     "hapi-pino": "^12.1.0",
     "hapi-pulse": "^3.0.1",
+    "http-status-codes": "^2.3.0",
     "https-proxy-agent": "^7.0.6",
     "ioredis": "^5.4.1",
     "lodash": "^4.17.21",
