--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest --coverage --verbose --runInBand --forceExit",
     "test:watch": "jest --watch",
     "test:lint": "standard",
-    "server:watch": "nodemon --inspect=0.0.0.0 --ext js --legacy-watch src/index.js",
+    "server:watch": "nodemon --inspect=0.0.0.0 --ext js,njk --legacy-watch src/index.js",
     "server:debug": "nodemon --inspect-brk=0.0.0.0 --ext js --legacy-watch src/index.js",
     "prestart": "npm run build",
     "start": "NODE_ENV=production node --use-strict ."
   },
   "author": "Defra DDTS",
   "contributors": [
-    "Amirs Ishmuhametovs <amirs.ishmuhametovs@defra.gov.uk>"
+    "Amirs Ishmuhametovs <amirs.ishmuhametovs@defra.gov.uk>",
+    "Fay Toward <fay.toward@defra.gov.uk>"
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
@@ -46,15 +47,12 @@
     "cssnano": "^7.0.6",
     "cssnano-preset-default": "^7.0.6",
     "date-fns": "^4.1.0",
-    "global-agent": "^3.0.0",
     "govuk-frontend": "^5.7.1",
     "hapi-pino": "^12.1.0",
     "hapi-pulse": "^3.0.1",
     "http-status-codes": "^2.3.0",
     "https-proxy-agent": "^7.0.6",
     "ioredis": "^5.4.1",
-    "lodash": "^4.17.21",
-    "node-fetch": "^3.3.2",
     "nunjucks": "^3.2.4",
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
@@ -68,10 +66,7 @@
     "@types/node": "22.9.0",
     "@types/nunjucks": "^3.2.6",
     "@types/webpack-assets-manifest": "^5.1.4",
-    "@typescript-eslint/eslint-plugin": "^7.17.0",
-    "@typescript-eslint/parser": "^7.17.0",
     "autoprefixer": "^10.4.20",
-    "cheerio": "^1.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "jest": "^29.7.0",
@@ -81,15 +76,12 @@
     "npm-run-all": "^4.1.5",
     "postcss-load-config": "^6.0.1",
     "postcss-loader": "^8.1.1",
-    "prettier": "^3.3.3",
     "sass-embedded": "^1.80.6",
     "sass-loader": "^16.0.3",
     "source-map-loader": "^5.0.0",
     "stylelint": "^16.10.0",
     "stylelint-config-gds": "^2.0.0",
     "terser-webpack-plugin": "^5.3.10",
-    "tsx": "^4.19.2",
-    "typescript": "^5.6.3",
     "webpack": "^5.96.1",
     "webpack-assets-manifest": "^5.2.1",
     "webpack-cli": "^5.1.4"
