--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,12 +26,12 @@ jobs:
       - name: Create Test Coverage Reports
         run: |
           npm ci
-      
+
       - name: Run Tests
         run: |
           mkdir -p coverage
           chmod -R a+rw ./coverage
-          docker compose -f docker-compose.yaml -f docker-compose.test.yaml run --rm "fcp-sfd-frontend"
+          docker compose -f compose.yaml -f compose.test.yaml run --rm "fcp-sfd-frontend"
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@master
