added fetch-depth to gitworkflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,8 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v4
-
+        with:
+          fetch-depth: 0 # Depth 0 is required for branch-based versioning
       - name: Create Test Coverage Reports
         run: |
           npm ci
