--- a/compose.yaml
+++ b/compose.yaml
@@ -13,6 +13,7 @@ services:
     environment:
       PORT: 3002
       NODE_ENV: development
+      ALLOW_ERROR_VIEWS: false
     networks:
       - fcp-sfd
     volumes:
