--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fcp-sfd-frontend",
-  "version": "0.24.1",
+  "version": "0.25.0",
   "description": "SFD Frontend",
   "sideEffects": false,
   "main": ".server/index.js",
@@ -19,8 +19,10 @@
     "lint:scss": "stylelint \"src/**/*.scss\" --cache --cache-location .cache/stylelint --cache-strategy content --color --ignore-path .gitignore",
     "postversion": "git add package.json package-lock.json && git commit -m $npm_package_version",
     "pretest": "npm run test:lint",
+    "docker:test": "docker compose down -v && docker compose -f compose.yaml -f compose.test.yaml run  --build --rm 'fcp-sfd-frontend'",
+    "docker:test:watch": "docker compose down -v && docker compose -f compose.yaml -f compose.test.yaml -f compose.test.watch.yaml run  --build --rm 'fcp-sfd-frontend'",
     "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest --coverage --verbose --runInBand --forceExit",
-    "test:watch": "jest --watch",
+    "test:watch": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest --coverage --verbose --runInBand --watch",
     "test:lint": "standard",
     "server:watch": "nodemon --inspect=0.0.0.0 --ext js,njk --legacy-watch src/index.js",
     "server:debug": "nodemon --inspect-brk=0.0.0.0 --ext js --legacy-watch src/index.js",
