--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fcp-sfd-frontend",
-  "version": "0.28.0",
+  "version": "0.29.0",
   "description": "SFD Frontend",
   "sideEffects": false,
   "main": ".server/index.js",
@@ -21,8 +21,8 @@
     "pretest": "npm run test:lint",
     "docker:test": "docker compose down -v && docker compose -f compose.yaml -f compose.test.yaml run  --build --rm 'fcp-sfd-frontend'",
     "docker:test:watch": "docker compose down -v && docker compose -f compose.yaml -f compose.test.yaml -f compose.test.watch.yaml run  --build --rm 'fcp-sfd-frontend'",
-    "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest --coverage --verbose --runInBand --forceExit",
-    "test:watch": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest --coverage --verbose --runInBand --watch",
+    "test": "rm -rf ./coverage/** && vitest run --coverage",
+    "test:watch": "vitest watch",
     "test:lint": "standard",
     "server:watch": "nodemon --inspect=0.0.0.0 --ext js,njk --legacy-watch src/index.js",
     "server:debug": "nodemon --inspect-brk=0.0.0.0 --ext js --legacy-watch src/index.js",
@@ -46,6 +46,7 @@
     "@hapi/inert": "7.1.0",
     "@hapi/vision": "7.0.3",
     "@hapi/yar": "11.0.2",
+    "@vitest/coverage-v8": "3.1.3",
     "aws-embedded-metrics": "4.2.0",
     "convict": "6.2.4",
     "cssnano": "7.0.6",
@@ -61,21 +62,22 @@
     "pino": "9.5.0",
     "pino-pretty": "13.0.0",
     "standard": "17.1.2",
-    "undici": "6.21.1"
+    "undici": "6.21.1",
+    "vitest": "3.1.3"
   },
   "devDependencies": {
     "@types/convict": "6.1.6",
     "@types/hapi__catbox-memory": "4.1.8",
-    "@types/jest": "29.5.14",
+    "@types/vi": "29.5.14",
     "@types/node": "22.9.0",
     "@types/nunjucks": "3.2.6",
     "@types/webpack-assets-manifest": "5.1.4",
     "autoprefixer": "10.4.20",
     "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "12.0.2",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
-    "jest-fetch-mock": "3.0.3",
+    "vi": "29.7.0",
+    "vi-environment-jsdom": "29.7.0",
+    "vi-fetch-mock": "3.0.3",
     "nodemon": "3.1.7",
     "npm-run-all": "4.1.5",
     "postcss-load-config": "6.0.1",
