--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "lint:scss": "stylelint \"src/**/*.scss\" --cache --cache-location .cache/stylelint --cache-strategy content --color --ignore-path .gitignore",
     "postversion": "git add package.json package-lock.json && git commit -m $npm_package_version",
     "pretest": "npm run test:lint",
-    "docker:test": "docker compose down -v && docker compose -f compose.yaml -f compose.test.yaml run  --build --rm 'fcp-sfd-frontend'",
-    "docker:test:watch": "docker compose down -v && docker compose -f compose.yaml -f compose.test.yaml -f compose.test.watch.yaml run  --build --rm 'fcp-sfd-frontend'",
+    "docker:test": "docker compose down -v && docker compose -f compose.yaml -f compose.test.yaml run --build --rm 'fcp-sfd-frontend'",
+    "docker:test:watch": "docker compose down -v && docker compose -f compose.yaml -f compose.test.yaml -f compose.test.watch.yaml run --build --rm 'fcp-sfd-frontend'",
     "test": "rm -rf ./coverage/** && vitest run --coverage",
     "test:watch": "vitest watch",
     "test:lint": "standard",
@@ -46,7 +46,6 @@
     "@hapi/inert": "7.1.0",
     "@hapi/vision": "7.0.3",
     "@hapi/yar": "11.0.2",
-    "@vitest/coverage-v8": "3.1.3",
     "aws-embedded-metrics": "4.2.0",
     "convict": "6.2.4",
     "cssnano": "7.0.6",
@@ -62,22 +61,18 @@
     "pino": "9.5.0",
     "pino-pretty": "13.0.0",
     "standard": "17.1.2",
-    "undici": "6.21.1",
-    "vitest": "3.1.3"
+    "undici": "6.21.1"
   },
   "devDependencies": {
     "@types/convict": "6.1.6",
     "@types/hapi__catbox-memory": "4.1.8",
-    "@types/vi": "29.5.14",
     "@types/node": "22.9.0",
     "@types/nunjucks": "3.2.6",
     "@types/webpack-assets-manifest": "5.1.4",
+    "@vitest/coverage-v8": "^3.1.3",
     "autoprefixer": "10.4.20",
     "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "12.0.2",
-    "vi": "29.7.0",
-    "vi-environment-jsdom": "29.7.0",
-    "vi-fetch-mock": "3.0.3",
     "nodemon": "3.1.7",
     "npm-run-all": "4.1.5",
     "postcss-load-config": "6.0.1",
@@ -88,6 +83,7 @@
     "stylelint": "16.10.0",
     "stylelint-config-gds": "2.0.0",
     "terser-webpack-plugin": "5.3.10",
+    "vitest": "3.1.3",
     "webpack": "5.96.1",
     "webpack-assets-manifest": "5.2.1",
     "webpack-cli": "5.1.4"
