--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "autoprefixer": "10.4.20",
     "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "12.0.2",
+    "jsdom": "26.1.0",
     "nodemon": "3.1.7",
     "npm-run-all": "4.1.5",
     "postcss-load-config": "6.0.1",
