--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "@types/node": "22.9.0",
     "@types/nunjucks": "3.2.6",
     "@types/webpack-assets-manifest": "5.1.4",
-    "@vitest/coverage-v8": "^3.1.3",
+    "@vitest/coverage-v8": "3.1.3",
     "autoprefixer": "10.4.20",
     "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "12.0.2",
