--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint:scss": "stylelint \"src/**/*.scss\" --cache --cache-location .cache/stylelint --cache-strategy content --color --ignore-path .gitignore",
     "postversion": "git add package.json package-lock.json && git commit -m $npm_package_version",
     "pretest": "npm run test:lint",
+    "docker:debug": "docker compose -f compose.yaml -f compose.debug.yaml -p \"fcp-sfd-frontend\" up",
     "docker:test": "docker compose down -v && docker compose -f compose.yaml -f compose.test.yaml run --build --rm 'fcp-sfd-frontend'",
     "docker:test:watch": "docker compose down -v && docker compose -f compose.yaml -f compose.test.yaml -f compose.test.watch.yaml run --build --rm 'fcp-sfd-frontend'",
     "test": "rm -rf ./coverage/** && vitest run --coverage",
