--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -26,10 +26,21 @@ jobs:
         with:
           node-version: 22
           cache: npm
-          
+
       - name: Install dependencies
         run: |
           npm ci
+
+      - name: Temporary tag check
+        run: |
+          ! grep -R 'describe.only(\|it.only(' test
+
+      - name: Temporary log check
+        run: |
+          if grep -R 'console.log(' ./app/ ./test/; then
+            echo "console.log statement found. Please remove it."
+            exit 1
+          fi
 
       - name: Test Docker Image Build
         run: |
