--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fcp-sfd-frontend",
-  "version": "0.30.5",
+  "version": "0.30.6",
   "description": "SFD Frontend",
   "sideEffects": false,
   "main": ".server/index.js",
@@ -36,6 +36,7 @@
     "Amirs Ishmuhametovs <amirs.ishmuhametovs@defra.gov.uk>",
     "Fay Toward <fay.toward@defra.gov.uk>",
     "Rana Salem <rana.salem@defra.gov.uk>",
+    "Abidemi Adio <abidemi.adio@defra.gov.uk>",
     "John Watson <john.watson1@defra.gov.uk>"
   ],
   "license": "OGL-UK-3.0",
@@ -46,6 +47,10 @@
     "@hapi/catbox-redis": "7.0.2",
     "@hapi/hapi": "21.3.12",
     "@hapi/inert": "7.1.0",
+    "@hapi/jwt": "3.2.0",
+    "hapi-pino": "12.1.0",
+    "hapi-pulse": "3.0.1",
+    "jwk-to-pem": "2.0.7",
     "@hapi/vision": "7.0.3",
     "@hapi/yar": "11.0.2",
     "aws-embedded-metrics": "4.2.0",
@@ -54,8 +59,6 @@
     "cssnano-preset-default": "7.0.6",
     "date-fns": "4.1.0",
     "govuk-frontend": "5.7.1",
-    "hapi-pino": "12.1.0",
-    "hapi-pulse": "3.0.1",
     "http-status-codes": "2.3.0",
     "https-proxy-agent": "7.0.6",
     "ioredis": "5.4.1",
@@ -63,7 +66,7 @@
     "pino": "9.5.0",
     "pino-pretty": "13.0.0",
     "standard": "17.1.2",
-    "undici": "6.21.1"
+    "undici": "^6.21.3"
   },
   "devDependencies": {
     "@types/convict": "6.1.6",
