--- a/compose.yaml
+++ b/compose.yaml
@@ -15,6 +15,8 @@ services:
       PORT: 3002
       NODE_ENV: development
       ALLOW_ERROR_VIEWS: ${ALLOW_ERROR_VIEWS}
+      DAL_ENDPOINT: ${DAL_ENDPOINT:-http://fcp-dal-api:3005/graphql}
+      DAL_EMAIL_ADDRESS: ${DAL_EMAIL_ADDRESS}
     networks:
       - fcp-sfd
     volumes:
