--- a/compose.test.yaml
+++ b/compose.test.yaml
@@ -10,6 +10,12 @@ services:
         required: false
     environment:
       ALLOW_ERROR_VIEWS: false
+      DAL_ENDPOINT: http://fcp-dal-api:3005/graphql
+    depends_on:
+      fcp-dal-api:
+        condition: service_started
+      kits-mock:
+        condition: service_started
     volumes:
       - ./src/:/home/node/src
       - ./test/:/home/node/test
