--- a/package.json
+++ b/package.json
@@ -50,9 +50,6 @@
     "@hapi/hapi": "21.3.12",
     "@hapi/inert": "7.1.0",
     "@hapi/jwt": "3.2.0",
-    "hapi-pino": "12.1.0",
-    "hapi-pulse": "3.0.1",
-    "jwk-to-pem": "2.0.7",
     "@hapi/vision": "7.0.3",
     "@hapi/yar": "11.0.2",
     "aws-embedded-metrics": "4.2.0",
@@ -61,9 +58,12 @@
     "cssnano-preset-default": "7.0.6",
     "date-fns": "4.1.0",
     "govuk-frontend": "5.7.1",
+    "hapi-pino": "12.1.0",
+    "hapi-pulse": "3.0.1",
     "http-status-codes": "2.3.0",
     "https-proxy-agent": "7.0.6",
     "ioredis": "5.4.1",
+    "jwk-to-pem": "2.0.7",
     "nunjucks": "3.2.4",
     "pino": "9.5.0",
     "pino-pretty": "13.0.0",
@@ -80,7 +80,9 @@
     "autoprefixer": "10.4.20",
     "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "12.0.2",
+    "eslint": "^9.28.0",
     "jsdom": "26.1.0",
+    "neostandard": "^0.12.1",
     "nodemon": "3.1.7",
     "npm-run-all": "4.1.5",
     "postcss-load-config": "6.0.1",
