--- a/compose.yaml
+++ b/compose.yaml
@@ -35,7 +35,7 @@ services:
       - fcp-sfd
 
   fcp-dal-api:
-    image: defradigital/fcp-dal-api:0.41.0
+    image: defradigital/fcp-dal-api:0.46.0
     ports: 
       - 3005:3005
     depends_on:
@@ -47,8 +47,13 @@ services:
       PORT: 3005
       ENVIRONMENT: dev
       DISABLE_AUTH: true
-      RP_KITS_GATEWAY_INTERNAL_URL: http://kits-mock:3100/v1/
+      DISABLE_PROXY: true
       GRAPHQL_DASHBOARD_ENABLED: true
+      ADMIN_AD_GROUP_ID: unused
+      KITS_GATEWAY_INTERNAL_URL: http://kits-mock:3100/v1/
+      KITS_GATEWAY_TIMEOUT_MS: 3000
+      KITS_DISABLE_MTLS: true
+      DAL_REQUEST_TIMEOUT_MS: 3000
     networks:
       - fcp-sfd
 
