--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "sass-embedded": "1.80.6",
     "sass-loader": "16.0.3",
     "source-map-loader": "5.0.0",
+    "standard": "17.1.2",
     "stylelint": "16.10.0",
     "stylelint-config-gds": "2.0.0",
     "terser-webpack-plugin": "5.3.10",
