Integrated Defra-Id without Unit-Test

--- a/package.json
+++ b/package.json
@@ -44,14 +44,20 @@
   "dependencies": {
     "@defra/hapi-tracing": "1.0.0",
     "@elastic/ecs-pino-format": "1.5.0",
+    "@hapi/bell": "13.1.0",
     "@hapi/catbox-memory": "6.0.2",
     "@hapi/catbox-redis": "7.0.2",
+    "@hapi/cookie": "12.0.1",
+    "@hapi/crumb": "9.0.1",
     "@hapi/hapi": "21.3.12",
     "@hapi/inert": "7.1.0",
     "@hapi/jwt": "3.2.0",
+    "@hapi/scooter": "7.0.0",
     "@hapi/vision": "7.0.3",
+    "@hapi/wreck": "18.1.0",
     "@hapi/yar": "11.0.2",
     "aws-embedded-metrics": "4.2.0",
+    "blankie": "5.0.0",
     "cheerio": "^1.1.0",
     "convict": "6.2.4",
     "cssnano": "7.0.6",
