--- a/compose.yaml
+++ b/compose.yaml
@@ -4,7 +4,7 @@ services:
       context: .
       target: development
     ports:
-      - '3002:3002'
+      - '3000:3000'
       - '9002:9229'
     links:
       - 'redis:redis'
@@ -12,10 +12,18 @@ services:
       redis:
         condition: service_started
     environment:
-      PORT: 3002
+      PORT: 3000
       NODE_ENV: development
       ALLOW_ERROR_VIEWS: ${ALLOW_ERROR_VIEWS}
       DAL_ENDPOINT: ${DAL_ENDPOINT:-http://fcp-dal-api:3005/graphql}
+      DEFRA_ID_WELL_KNOWN_URL: ${DEFRA_ID_WELL_KNOWN_URL}
+      DEFRA_ID_CLIENT_ID: ${DEFRA_ID_CLIENT_ID}
+      DEFRA_ID_CLIENT_SECRET: ${DEFRA_ID_CLIENT_SECRET}
+      DEFRA_ID_SERVICE_ID: ${DEFRA_ID_SERVICE_ID}
+      DEFRA_ID_POLICY: ${DEFRA_ID_POLICY}
+      DEFRA_ID_REDIRECT_URL: http://localhost:3000/auth/sign-in-oidc
+      DEFRA_ID_SIGN_OUT_REDIRECT_URL: http://localhost:3000/auth/sign-out-oidc
+
     networks:
       - fcp-sfd
     volumes:
