--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "cssnano": "7.0.6",
     "cssnano-preset-default": "7.0.6",
     "date-fns": "4.1.0",
+    "dotenv": "^17.2.0",
     "govuk-frontend": "5.7.1",
     "hapi-pino": "12.1.0",
     "hapi-pulse": "3.0.1",
