--- a/compose.yaml
+++ b/compose.yaml
@@ -16,6 +16,7 @@ services:
       NODE_ENV: development
       ALLOW_ERROR_VIEWS: ${ALLOW_ERROR_VIEWS}
       DAL_ENDPOINT: ${DAL_ENDPOINT:-http://fcp-dal-api:3005/graphql}
+      DAL_CONNECTION: true
     networks:
       - fcp-sfd
     volumes:
