Modified unit tests

--- a/compose.test.yaml
+++ b/compose.test.yaml
@@ -11,7 +11,7 @@ services:
     environment:
       ALLOW_ERROR_VIEWS: false
       DAL_ENDPOINT: http://fcp-dal-api:3005/graphql
-      DAL_CONNECTION: true
+      DAL_CONNECTION: false
       DEFRA_ID_WELL_KNOWN_URL: https://accounts.google.com/.well-known/openid-configuration
       DEFRA_ID_CLIENT_ID: test-client-id
       DEFRA_ID_CLIENT_SECRET: test-client-secret
