--- a/compose.yaml
+++ b/compose.yaml
@@ -16,7 +16,7 @@ services:
       NODE_ENV: development
       ALLOW_ERROR_VIEWS: ${ALLOW_ERROR_VIEWS}
       DAL_ENDPOINT: ${DAL_ENDPOINT:-http://fcp-dal-api:3005/graphql}
-      DAL_CONNECTION: true
+      DAL_CONNECTION: false
       DEFRA_ID_WELL_KNOWN_URL: ${DEFRA_ID_WELL_KNOWN_URL}
       DEFRA_ID_CLIENT_ID: ${DEFRA_ID_CLIENT_ID}
       DEFRA_ID_CLIENT_SECRET: ${DEFRA_ID_CLIENT_SECRET}
