--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "Rana Salem <rana.salem@defra.gov.uk>",
     "Abidemi Adio <abidemi.adio@defra.gov.uk>",
     "John Watson <john.watson1@defra.gov.uk>",
-    "Rebecca Ransome <rebecca.ransome@defra.gov.uk>"
+    "Rebecca Ransome <rebecca.ransome@defra.gov.uk>",
+    "Simon Dunn <simon.dunn1@defra.gov.uk>"
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
