--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.51.2",
   "description": "SFD Frontend",
   "sideEffects": false,
-  "main": ".server/index.js",
+  "main": "src/index.js",
   "type": "module",
   "engines": {
     "node": ">=22"
@@ -20,8 +20,9 @@
     "postversion": "git add package.json package-lock.json && git commit -m $npm_package_version",
     "pretest": "npm run test:lint",
     "docker:debug": "docker compose -f compose.yaml -f compose.debug.yaml -p \"fcp-sfd-frontend\" up",
-    "docker:test": "docker compose down -v && docker compose -f compose.yaml -f compose.test.yaml run --build --rm 'fcp-sfd-frontend'",
-    "docker:test:watch": "docker compose down -v && docker compose -f compose.yaml -f compose.test.yaml -f compose.test.watch.yaml run --build --rm 'fcp-sfd-frontend'",
+    "docker:dev": "docker compose up",
+    "docker:test": "npm run lint && mkdir -p coverage 2>/dev/null || true docker compose -p fcp-sfd-frontend-test down -v && docker compose -f compose.yaml -f compose.test.yaml -p fcp-sfd-frontend-test run --build --rm fcp-sfd-frontend",
+    "docker:test:watch": "docker compose -p fcp-sfd-frontend-test down -v && docker compose -f compose.yaml -f compose.test.yaml -f compose.test.watch.yaml -p fcp-sfd-frontend-test run --build --rm fcp-sfd-frontend",
     "test": "rm -rf ./coverage/** && vitest run --coverage",
     "test:watch": "vitest watch",
     "test:lint": "standard",
@@ -58,7 +59,7 @@
     "@hapi/yar": "11.0.2",
     "aws-embedded-metrics": "4.2.0",
     "blankie": "5.0.0",
-    "cheerio": "^1.1.0",
+    "cheerio": "1.1.0",
     "convict": "6.2.4",
     "cssnano": "7.0.6",
     "cssnano-preset-default": "7.0.6",
@@ -73,7 +74,7 @@
     "nunjucks": "3.2.4",
     "pino": "9.5.0",
     "pino-pretty": "13.0.0",
-    "undici": "^6.21.3"
+    "undici": "6.21.3"
   },
   "devDependencies": {
     "@types/convict": "6.1.6",
@@ -85,9 +86,9 @@
     "autoprefixer": "10.4.20",
     "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "12.0.2",
-    "eslint": "^9.29.0",
+    "eslint": "9.29.0",
     "jsdom": "26.1.0",
-    "neostandard": "^0.12.1",
+    "neostandard": "0.12.1",
     "nodemon": "3.1.7",
     "npm-run-all": "4.1.5",
     "postcss-load-config": "6.0.1",
