--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   fcp-sfd-frontend:
-    build: 
+    build:
       context: .
       target: development
     ports:
@@ -16,7 +16,13 @@ services:
       NODE_ENV: development
       ALLOW_ERROR_VIEWS: ${ALLOW_ERROR_VIEWS}
       DAL_ENDPOINT: ${DAL_ENDPOINT:-http://fcp-dal-api:3005/graphql}
-      DAL_CONNECTION: true
+      DAL_TOKEN_ENDPOINT: https://login.microsoftonline.com/6f504113-6b64-43f2-ade9-242e05780007/oauth2/v2.0/token
+      DAL_CONNECTION: true,
+      DAL_CLIENT_ID: ${DAL_CLIENT_ID}
+      DAL_CLIENT_SECRET: ${DAL_CLIENT_SECRET}
+      DAL_TENANT_ID: ${DAL_TENANT_ID}
+      REDIS_HOST: redis
+      REDIS_KEY_PREFIX: 'fcp-sfd-frontend:'
     networks:
       - fcp-sfd
     volumes:
@@ -37,7 +43,7 @@ services:
 
   fcp-dal-api:
     image: defradigital/fcp-dal-api:0.55.0
-    ports: 
+    ports:
       - 3005:3005
     depends_on:
       - kits-mock
