--- a/compose.yaml
+++ b/compose.yaml
@@ -25,6 +25,7 @@ services:
       DEFRA_ID_POLICY: ${DEFRA_ID_POLICY}
       DEFRA_ID_REDIRECT_URL: http://localhost:3000/auth/sign-in-oidc
       DEFRA_ID_SIGN_OUT_REDIRECT_URL: http://localhost:3000/auth/sign-out-oidc
+      DAL_EMAIL_HEADER: ${DAL_EMAIL_HEADER}
 
   kits-mock:
     image: defradigital/fcp-dal-upstream-mock
