--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "Abidemi Adio <abidemi.adio@defra.gov.uk>",
     "John Watson <john.watson1@defra.gov.uk>",
     "Rebecca Ransome <rebecca.ransome@defra.gov.uk>",
-    "Simon Dunn <simon.dunn1@defra.gov.uk>"
+    "Simon Dunn <simon.dunn1@defra.gov.uk>",
+    "Adam Kay <adam.kay@defra.gov.uk>"
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
