--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
     "cssnano": "7.0.6",
     "cssnano-preset-default": "7.0.6",
     "date-fns": "4.1.0",
+    "global-agent": "3.0.0",
     "govuk-frontend": "5.7.1",
+    "graphql": "^16.11.0",
     "hapi-pino": "12.1.0",
     "hapi-pulse": "3.0.1",
     "http-status-codes": "2.3.0",
@@ -76,8 +78,7 @@
     "nunjucks": "3.2.4",
     "pino": "9.5.0",
     "pino-pretty": "13.0.0",
-    "undici": "6.21.3",
-    "global-agent": "3.0.0"
+    "undici": "6.21.3"
   },
   "devDependencies": {
     "@types/convict": "6.1.6",
