--- a/compose.yaml
+++ b/compose.yaml
@@ -28,6 +28,7 @@ services:
       DEFRA_ID_REDIRECT_URL: http://localhost:3000/auth/sign-in-oidc
       DEFRA_ID_SIGN_OUT_REDIRECT_URL: http://localhost:3000/auth/sign-out-oidc
       DAL_EMAIL_HEADER: ${DAL_EMAIL_HEADER}
+      QUIET_LOGS: ${QUIET_LOGS}
 
   kits-mock:
     image: defradigital/fcp-dal-upstream-mock
