Pin DAL docker images to specific versions

--- a/compose.yaml
+++ b/compose.yaml
@@ -30,7 +30,7 @@ services:
       DAL_EMAIL_HEADER: ${DAL_EMAIL_HEADER}
 
   kits-mock:
-    image: defradigital/fcp-dal-upstream-mock
+    image: defradigital/fcp-dal-upstream-mock:0.38.0
     environment:
       MOCK_LOG_LEVEL: info
       MOCK_SERVER_COLLECTION: all
