--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -92,7 +92,22 @@
       }
     },
     {
-      "label": "🧹 Clean Frontend",
+      "label": "🧹 Lint Fix",
+      "detail": "Automatically fix linting issues in the codebase",
+      "type": "shell",
+      "command": "npm run lint:fix; echo \"Code cleaned! ✨\"",
+      "group": "test",
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": true,
+        "panel": "shared",
+        "showReuseMessage": false,
+        "clear": true
+      }
+    },
+    {
+      "label": "🛠️ Clean Frontend",
       "detail": "Will drop the containers, remove related images and volumes",
       "type": "shell",
       "command": "docker compose down --rmi local -v; echo \"All done! 🎉\"",
