--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "ioredis": "5.4.1",
     "jwk-to-pem": "2.0.7",
     "nunjucks": "3.2.4",
-    "osdatahub": "^0.2.2",
+    "osdatahub": "0.2.2",
     "pino": "9.5.0",
     "pino-pretty": "13.0.0",
     "undici": "6.21.3"
