--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fcp-sfd-frontend",
-  "version": "0.62.0",
+  "version": "0.116.0",
   "description": "SFD Frontend",
   "sideEffects": false,
   "main": "src/index.js",
@@ -75,6 +75,7 @@
     "https-proxy-agent": "7.0.6",
     "ioredis": "5.4.1",
     "jwk-to-pem": "2.0.7",
+    "moment": "2.30.1",
     "nunjucks": "3.2.4",
     "osdatahub": "0.2.2",
     "pino": "9.5.0",
