--- a/compose.yaml
+++ b/compose.yaml
@@ -29,7 +29,7 @@ services:
       DEFRA_ID_SIGN_OUT_REDIRECT_URL: http://localhost:3000/auth/sign-out-oidc
       DAL_EMAIL_HEADER: ${DAL_EMAIL_HEADER}
       OS_PLACES_CLIENT_ID: ${OS_PLACES_CLIENT_ID}
-      OS_PLACES_STUB: ${OS_PLACES_STUB}
+      OS_PLACES_STUB: ${OS_PLACES_STUB:-false}
 
   kits-mock:
     image: defradigital/fcp-dal-upstream-mock:0.38.0
