Update IAHW_ENDPOINT to use environment variable for flexibility

--- a/compose.yaml
+++ b/compose.yaml
@@ -30,7 +30,8 @@ services:
       DAL_EMAIL_HEADER: ${DAL_EMAIL_HEADER}
       OS_PLACES_CLIENT_ID: ${OS_PLACES_CLIENT_ID}
       OS_PLACES_STUB: ${OS_PLACES_STUB:-false}
-      IAHW_ENDPOINT: https://ffc-ahwr-farmer-test.azure.defra.cloud/sign-in?ssoOrgId=
+      IAHW_ENDPOINT: ${IAHW_ENDPOINT}
+      
 
   kits-mock:
     image: defradigital/fcp-dal-upstream-mock:0.38.0
