Add: Feature toggle config

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,4 @@ IAHW_ENDPOINT=https://ffc-ahwr-farmer-test.azure.defra.cloud/sign-in?ssoOrgId=
 
 # Misc
 ALLOW_ERROR_VIEWS=true
+PERSONAL_DETAILS_INTERRUPTER_ENABLED=true
