--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -135,6 +135,41 @@
         "showReuseMessage": false,
         "clear": true
       }
+    },
+    {
+      "label": "🥸 DefraID: Enable stub",
+      "detail": "Switch frontend to use DefraID stub and recreate containers",
+      "type": "shell",
+      "command": "docker compose up -d --force-recreate && echo \"DefraID stub enabled – containers restarted 🎉\"",
+      "options": {
+        "env": {
+          "DEFRA_ID_WELL_KNOWN_URL": "http://host.docker.internal:3007/idphub/b2c/b2c_1a_cui_cpdev_signupsigninsfi/.well-known/openid-configuration"
+        }
+      },
+      "group": "test",
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": true,
+        "panel": "shared",
+        "showReuseMessage": false,
+        "clear": true
+      }
+    },
+    {
+      "label": "🤡 DefraID: Disable stub",
+      "detail": "Switch frontend back to real DefraID and restart containers",
+      "type": "shell",
+      "command": "docker compose up -d --force-recreate && echo \"DefraID stub disabled – containers restarted 🎉\"",
+      "group": "test",
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": true,
+        "panel": "shared",
+        "showReuseMessage": false,
+        "clear": true
+      }
     }
   ]
 }
