--- a/compose.yaml
+++ b/compose.yaml
@@ -32,6 +32,7 @@ services:
       OS_PLACES_STUB: ${OS_PLACES_STUB:-false}
       IAHW_ENDPOINT: ${IAHW_ENDPOINT}
       PERSONAL_DETAILS_INTERRUPTER_ENABLED: ${PERSONAL_DETAILS_INTERRUPTER_ENABLED:-false}
+      CPH_ENABLED: ${CPH_ENABLED:-false}
 
   kits-mock:
     image: defradigital/fcp-dal-upstream-mock:0.38.0
