--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,6 @@ DAL_EMAIL_HEADER=testuser11@defra.gov.uk
 
 # DEFRA ID config
 DEFRA_ID_WELL_KNOWN_URL=https://defra-id.well.known/url
-# DEFRA ID Stub Service - toggle DEFRA_ID_WELL_KNOWN_URL on/off to use the stubbed defraId service
-# DEFRA_ID_WELL_KNOWN_URL=http://stub-service/defra-id.well.known/url
 DEFRA_ID_CLIENT_ID=long-value-full-of-numbers-and-letters-in-lowercase
 DEFRA_ID_CLIENT_SECRET=longValueFullOfNumbersAndLettersAndSymbols
 DEFRA_ID_SERVICE_ID=long-value-full-of-numbers-and-letters-in-lowercase
@@ -31,4 +29,7 @@ IAHW_ENDPOINT=https://ffc-ahwr-farmer-test.azure.defra.cloud/sign-in?ssoOrgId=
 
 # Misc
 ALLOW_ERROR_VIEWS=true
+
+# Feature toggles
+CPH_ENABLED=true
 PERSONAL_DETAILS_INTERRUPTER_ENABLED=true
