--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -8,18 +8,27 @@ services:
     volumes:
       - ./src:/home/node/src
       - ./package.json:/home/node/package.json
+    environment:
+      DAL_ENDPOINT: http://fcp-dal-api:3005/graphql
 
   kits-mock:
+    image: fcp-dal-upstream-mock:local
+    build:
+      context: /Users/adamkay1/Projects/fcp-dal-upstream-mock
+      target: development
+    command: ["node", "src"]
     ports:
       - '3100:3100'
     networks:
       - fcp-sfd
 
   fcp-dal-api:
-    ports: 
+    ports:
       - 3005:3005
     networks:
       - fcp-sfd
+    environment:
+      KITS_GATEWAY_INTERNAL_URL: http://kits-mock:3100/extapi/
 
   redis:
     ports:
