Add: Feature toggle config

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,4 @@ ALLOW_ERROR_VIEWS=true
 # Feature toggles
 CPH_ENABLED=true
 PERSONAL_DETAILS_INTERRUPTER_ENABLED=true
+BUSINESS_DETAILS_INTERRUPTER_ENABLED=true
