--- a/compose.test.yaml
+++ b/compose.test.yaml
@@ -18,6 +18,7 @@ services:
       DEFRA_ID_SERVICE_ID: test-service-id
       DEFRA_ID_POLICY: test-policy
       PERSONAL_DETAILS_INTERRUPTER_ENABLED: false
+      BUSINESS_DETAILS_INTERRUPTER_ENABLED: false
       CPH_ENABLED: false
     depends_on:
       fcp-dal-api:
