--- a/compose.yaml
+++ b/compose.yaml
@@ -31,6 +31,7 @@ services:
       OS_PLACES_CLIENT_ID: ${OS_PLACES_CLIENT_ID}
       OS_PLACES_STUB: ${OS_PLACES_STUB:-false}
       PERSONAL_DETAILS_INTERRUPTER_ENABLED: ${PERSONAL_DETAILS_INTERRUPTER_ENABLED:-false}
+      BUSINESS_DETAILS_INTERRUPTER_ENABLED: ${BUSINESS_DETAILS_INTERRUPTER_ENABLED:-false}
       CPH_ENABLED: ${CPH_ENABLED:-false}
 
   kits-mock:
