Add: IAHW endpoint in docker compose

--- a/compose.yaml
+++ b/compose.yaml
@@ -33,6 +33,7 @@ services:
       PERSONAL_DETAILS_INTERRUPTER_ENABLED: ${PERSONAL_DETAILS_INTERRUPTER_ENABLED:-false}
       BUSINESS_DETAILS_INTERRUPTER_ENABLED: ${BUSINESS_DETAILS_INTERRUPTER_ENABLED:-false}
       CPH_ENABLED: ${CPH_ENABLED:-false}
+      IAHW_ENDPOINT: ${IAHW_ENDPOINT:-false}
 
   kits-mock:
     image: defradigital/fcp-dal-upstream-mock:0.38.0
