Update: set default value for AUTH_OVERRIDE in compose.yaml

--- a/compose.yaml
+++ b/compose.yaml
@@ -74,7 +74,7 @@ services:
       start_period: 3s
     environment:
       AUTH_MODE: ${AUTH_MODE}
-      AUTH_OVERRIDE: ${AUTH_OVERRIDE}
+      AUTH_OVERRIDE: ${AUTH_OVERRIDE:-}
       AUTH_OVERRIDE_FILE: ${AUTH_OVERRIDE_FILE}
     volumes:
       - ./defra-id.data.json:/data/defra-id.data.json
