--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,9 @@ OS_PLACES_ENDPOINT=https://api.os.uk/search/places/v1/{path}?key=OS_PLACES_CLIEN
 # IAHW config
 IAHW_ENDPOINT=https://ffc-ahwr-farmer-test.azure.defra.cloud/sign-in?ssoOrgId=
 
+# Local DAL upstream mock (optional). Required for the "DefraID stub + DAL upstream mock" task.
+DAL_UPSTREAM_MOCK_LOCAL_PATH=/path/to/fcp-dal-upstream-mock
+
 # Misc
 ALLOW_ERROR_VIEWS=true
 
