--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -170,6 +170,26 @@
         "showReuseMessage": false,
         "clear": true
       }
+    },
+    {
+      "label": "🥸🧪 DefraID stub + DAL upstream mock",
+      "detail": "Use DefraID stub and local DAL upstream mock together (requires compose.kits-local.yaml)",
+      "type": "shell",
+      "command": "docker compose -f compose.yaml -f compose.override.yaml -f compose.kits-local.yaml up -d --build --force-recreate && echo \"DefraID stub + DAL upstream mock enabled – containers restarted 🎉\"",
+      "options": {
+        "env": {
+          "DEFRA_ID_WELL_KNOWN_URL": "http://host.docker.internal:3007/idphub/b2c/b2c_1a_cui_cpdev_signupsigninsfi/.well-known/openid-configuration"
+        }
+      },
+      "group": "test",
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": true,
+        "panel": "shared",
+        "showReuseMessage": false,
+        "clear": true
+      }
     }
   ]
 }
